fix(scss): align logo & h1 to vertical center
align logo and h1 to vertical center of header

--- a/css/style.css
+++ b/css/style.css
@@ -592,18 +592,24 @@ header {
 
 .logo-header {
   width: 4em;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 h1 {
   color: #fff;
   font-family: "Oswald", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .toggle-btn {
   position: absolute;
   right: 1em;
-  top: 0;
+  vertical-align: middle;
 }
 
 .navigation {
@@ -644,6 +650,7 @@ h1 {
   text-decoration: none;
   height: 40px;
   width: 40px;
+  margin-bottom: 5em;
 }
 
 .toggle-btn:before,
