--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -34,18 +34,24 @@ header {
 
 .logo-header {
   width: 4em;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 h1 {
 	color: $white;
 	font-family: $header;
 	text-transform: uppercase;
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .toggle-btn {
 	position: absolute;
 	right: 1em;
-	top: 0;
+  vertical-align: middle;
 }
 
 .navigation {
@@ -82,6 +88,7 @@ h1 {
   text-decoration: none;
   height: 40px;
   width: 40px;
+  margin-bottom: 5em;
   &:before {
     border: 1px solid $white;
     display: inline-block;
